Create Landing Page

--- a/index.html
+++ b/index.html
@@ -12,46 +12,12 @@
 		<title>To Do List</title>
 	</head>
 	<body>
-		<div class="todo-app-container">
-			<div class="todo-top-bar">
-				<i class="fa-regular fa-rectangle-list"></i>
-				<h2>To Do List</h2>
-			</div>
-			<div class="todo-list-container">
-				<!-- Left Column - Sorting?? -->
-				<div class="left-container">
-					<img src="./assets/todo.svg" alt="to do image" />
-					<span class="todo-counter"></span>
-				</div>
-
-				<!-- Center Column-->
-				<div class="center-container">
-					<h3>Hello</h3>
-					<form>
-						<ul class="todo-list"></ul>
-						<div class="input-field-wrapper">
-							<input
-								class="add-task-input"
-								required
-								type="text"
-								maxlength="50"
-								placeholder="Add To Do Task Here"
-							/>
-							<button type="submit" class="add-btn">
-								<i class="fa-solid fa-circle-plus"></i>
-							</button>
-							<button type="reset" class="add-btn">
-								<i class="fa-solid fa-broom"></i>
-							</button>
-						</div>
-					</form>
-				</div>
-
-				<!-- Right Column History?? -->
-				<div class="right-container">Right</div>
-			</div>
+		<div class="landing-container">
+			<h1>Simple To Do List</h1>
+			<h2>Simply Add, Edit, Check Completed and Delete To Do</h2>
+			<img src="./assets/todo.svg" alt="to do image" />
+			<a href="./todo.html">Check This Out</a>
 		</div>
-
 		<script src="./index.js"></script>
 	</body>
 </html>
